force-app/main/default/objects/User/fields/AircallPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>AircallPhoneNumber__c</fullName>
    <description>Numéro aircall ne pouvant émettre ou recevoir  de SMS</description>
    <label>Téléphone Aircall</label>
    <type>Phone</type>
</CustomField>