force-app/main/default/objects/User/fields/BypassAllTriggers__c.field-meta.xml
<CustomField>
    <fullName>BypassAllTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cocher ce champ si l&#39;utilisateur souhaite ne déclencher aucune action de type Trigger.</description>
    <label>BypassAllTriggers</label>
    <type>Checkbox</type>
</CustomField>