force-app/main/default/objects/User/fields/BypassTriggers__c.field-meta.xml
<CustomField>
    <fullName>BypassTriggers__c</fullName>
    <description>Contient les noms des actions gérées par du code. Les valeurs sélectionnées ne seront pas déclenchées pour cet utilisateur.</description>
    <inlineHelpText>Les valeurs sélectionnées ne seront pas déclenchées pour cet utilisateur.</inlineHelpText>
    <label>BypassTriggers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP01_SetEventPhoneFromWhoId</fullName>
            </value>
            <value>
                <fullName>AP02_ContactStakeholder</fullName>
            </value>
            <value>
                <fullName>AP02_EventFromLead</fullName>
            </value>
            <value>
                <fullName>AP03_StakeHolder</fullName>
            </value>
            <value>
                <fullName>AP04_Account</fullName>
            </value>
            <value>
                <fullName>AP06_SendEmailFromLead</fullName>
            </value>
            <value>
                <fullName>AP12_UploadFile</fullName>
            </value>
            <value>
                <fullName>AP16_ManageRecordTypeFromHeroku</fullName>
            </value>
            <value>
                <fullName>AP19_MainContact</fullName>
                <isActive>false</isActive>
                <label>AP19_MainContact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>