force-app/main/default/objects/User/fields/BypassValidationRules__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si cochée, les règles de validation ne seront pas exécutées pour cet utilisateur.</description>
    <inlineHelpText>Si cochée, les règles de validation ne seront pas exécutées pour cet utilisateur.</inlineHelpText>
    <label>BypassValidationRules</label>
    <type>Checkbox</type>
</CustomField>