force-app/main/default/objects/User/fields/numm__Assistant_saisie_comptable__c.field-meta.xml
<CustomField>
    <fullName>numm__Assistant_saisie_comptable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Assistant saisie comptable</label>
    <type>Checkbox</type>
</CustomField>