force-app/main/default/objects/User/fields/numm__BypassApexTriggers__c.field-meta.xml
<CustomField>
    <fullName>numm__BypassApexTriggers__c</fullName>
    <label>Bypass apex triggers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP01</fullName>
            </value>
            <value>
                <fullName>AP02</fullName>
            </value>
            <value>
                <fullName>AP03</fullName>
            </value>
            <value>
                <fullName>AP04</fullName>
            </value>
            <value>
                <fullName>AP05</fullName>
            </value>
            <value>
                <fullName>AP06</fullName>
            </value>
            <value>
                <fullName>AP07</fullName>
            </value>
            <value>
                <fullName>AP08</fullName>
            </value>
            <value>
                <fullName>AP09</fullName>
            </value>
            <value>
                <fullName>AP10</fullName>
            </value>
            <value>
                <fullName>AP11</fullName>
            </value>
            <value>
                <fullName>AP12</fullName>
            </value>
            <value>
                <fullName>AP13</fullName>
            </value>
            <value>
                <fullName>AP14</fullName>
            </value>
            <value>
                <fullName>AP15</fullName>
            </value>
            <value>
                <fullName>AP16</fullName>
            </value>
            <value>
                <fullName>AP17</fullName>
            </value>
            <value>
                <fullName>AP18</fullName>
            </value>
            <value>
                <fullName>AP19</fullName>
            </value>
            <value>
                <fullName>AP20</fullName>
            </value>
            <value>
                <fullName>AP21</fullName>
            </value>
            <value>
                <fullName>AP22</fullName>
            </value>
            <value>
                <fullName>AP23</fullName>
            </value>
            <value>
                <fullName>AP24</fullName>
            </value>
            <value>
                <fullName>AP25</fullName>
            </value>
            <value>
                <fullName>AP26</fullName>
            </value>
            <value>
                <fullName>AP27</fullName>
            </value>
            <value>
                <fullName>AP28</fullName>
            </value>
            <value>
                <fullName>AP29</fullName>
            </value>
            <value>
                <fullName>AP30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>