force-app/main/default/objects/User/fields/numm__BypassRegles__c.field-meta.xml
<CustomField>
    <fullName>numm__BypassRegles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Règles de validation</label>
    <type>Checkbox</type>
</CustomField>