force-app/main/default/objects/User/fields/numm__BypassWorkflows__c.field-meta.xml
<CustomField>
    <fullName>numm__BypassWorkflows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass workflows</label>
    <type>Checkbox</type>
</CustomField>