force-app/main/default/objects/User/fields/numm__Trigramme__c.field-meta.xml
<CustomField>
    <fullName>numm__Trigramme__c</fullName>
    <label>Trigramme</label>
    <length>5</length>
    <type>Text</type>
</CustomField>