force-app/main/default/objects/User/fields/priseRdvSales__c.field-meta.xml
<CustomField>
    <fullName>priseRdvSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prise de rdv sales</label>
    <type>Checkbox</type>
</CustomField>